virtual_encoder/webui/src/style.css
body {
  margin: 0;
}

.wrapper {
  display: grid;
  grid-gap: 4px;
  font-family: sans-serif;

  width: 98vw;
  height: 98vh;
  padding: 1vh 1vw;

  grid-template-columns: min-content 168px auto;
  grid-template-rows: auto 240px;
  grid-template-areas:
    "img       monitoramento log"
    "controles controles     log"
}

@media (width <=1200px) {
  .wrapper {
    grid-template-columns: auto 168px;
    grid-template-rows: auto 240px;
    grid-template-areas:
      "img       monitoramento"
      "controles controles    "
  }

  .log {
    display: none !important;
  }
}

.monitoramento {
  grid-area: monitoramento;

  display: grid;
  grid-template-rows: 0.3fr 2fr 1fr 1fr;
  grid-auto-flow: column;
  grid-gap: 4px;

  user-select: none;
}

.visualization {
  display: grid;
  justify-items: center;
  align-items: center;

  position: relative;
  width: 100%;
  height: 100%;
}

.video-frame {
  object-fit: contain;
  min-height: 480px;
  height: 100%;
  aspect-ratio: 4/3;
  grid-area: "img";
}

.crosshair.hidden {
  display: none;
}

.crosshair.horizontal {
  z-index: 1;
  height: 1px;
  width: 100%;
  background: red;
  grid-area: 1/1;
}

.crosshair.vertical {
  z-index: 1;
  height: 100%;
  width: 1px;
  background: red;
  grid-area: 1/1;
}

.log {
  display: flex;
  flex-direction: column;
  grid-area: log;
  grid-gap: 4px;
  width: 100%;
  height: 98vh;
}

.trajectory-container {
  box-sizing: border-box;
  border: solid 1px black;
  overflow-x: clip;
  height: 40%;
}

.log>button {
  height: 48px;
}

.log-window {
  overflow: scroll;
  display: flex;
  flex-direction: column;
  flex-grow: 2;
  width: 100%;
  border: 1px solid #aaaaaa;
  box-sizing: border-box;
}

.log-line:nth-child(even) {
  background-color: #c6c6c6;
}

.log-line {
  font-family: mono, monospace;
  font-size: 1.5em;
  padding: 0.35em;
  border-bottom: 1px solid #aaaaaa;
  box-sizing: border-box;
}

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.4);
}

.modal-content {
  background-color: #fefefe;
  margin: auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;

  display: grid;
  grid-template-rows: min(64px, auto) auto;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 16px;
}

.modal-modos>.modal-content {
  width: 40%;

  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 16px;
}

.modal-close {
  justify-self: end;
  grid-area: 1 / 3;

  user-select: none;
  font-size: 42px;
  font-weight: bold;
  color: #aaaaaa;
}

.modal-modos .modal-close {
  grid-area: 1 / 2;
}

.modal-close:hover,
.modal-close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

.modal-content>button {
  grid-area: 2;
  height: 150px;
}

.modal-content>.modal-titulo {
  grid-area: 1 / 1 / 1 / span 2;

  user-select: none;
  font-size: 36px;
  font-weight: bold;
}

.modal.modal-download>.modal-content {
  width: 40%;

  display: grid;
  grid-template-rows: auto 50vh 3em;
  grid-template-columns: repeat(2, 1fr) auto;
  grid-gap: 16px;
}

.modal-download .modal-list {
  grid-column: span 3;
  overflow: scroll;
}

.modal-download .modal-row {
  display: flex;
  padding: 12px;
  background-color: 1px solid #aaaaaa;
  user-select: none;
  cursor: pointer;
  border: 1px solid transparent;
}

.modal-download .modal-row:hover {
  border: 1px solid blue;
}

.modal-download .modal-row:nth-child(even) {
  background-color: #c6c6c6;
}

.modal-download .modal-row :first-child {
  flex-grow: 1;
  align-self: center;
  font-size: 1em;
}

.modal-download .modal-update {
  grid-area: 3 / 1 / span 1 / span 3;
  height: auto;
}

.modal-upgrade input {
  grid-area: 3 / 1 / auto / span 3;
}

.modal-upgrade .modal-info {
  grid-area: 2 / 1 / auto / span 3;
}

.visualization>canvas {
  position: absolute;
  top: 0;
  left: 0;
}

.controles {
  grid-area: controles;

  display: grid;
  grid-gap: 4px;

  grid-template-columns: repeat(14, 1fr);
  grid-template-rows: 24px 24px 1fr 1fr 1fr;
}

.brilho {
  grid-area: 1 / 1 / span 1 / span 14;
  user-select: none;
}

.brilho {
  display: flex;
  gap: 8px;
}

.brilho>input[type="button"] {
  flex-shrink: 10;
}

.iniciar-aquisicao {
  grid-area: 5 / auto / span 1 / span 2;
}

.parar-aquisicao {
  grid-area: 5 / auto / span 1 / span 2;
}

.mudar-modo {
  grid-area: 5 / 8 / span 1 / span 2;
}

.toggle-streaming {
  grid-area: 4 / 11 / span 1 / span 2;
}

.toggle-calibracao {
  grid-area: 5 / 11 / span 1 / span 2;
}

.listar-ensaios {
  grid-area: 3 / 11 / span 1 / span 2;
}

.upgrade {
  grid-area: 3 / 13 / span 1 / span 2;
}

.reiniciar {
  grid-area: 5 / 13 / span 1 / span 2;
}

.desligar {
  grid-area: 4 / 13 / span 1 / span 2;
}

.exposicao {
  grid-area: 3 / 1 / span 1 / span 2;
}

.pulsos-por-segundo {
  grid-area: 3 / 3 / span 1 / span 2;
  display: flex;
  flex-direction: column;
}

.zerar-deslocamento {
  grid-area: 3 / 3 / span 1 / span 2;
}


.motivo {
  grid-area: 3 / 5 / span 1 / span 5;
  display: flex;
  flex-direction: column;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

label>div {
  align-self: center;
}

.brilho>input {
  flex-grow: 1;
  width: 100%;
}

.pulsos-por-segundo>input,
.motivo>input {
  flex-grow: 1;
}

.monitoramento>div {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.ok {
  background-color: #009933;
  color: white;

  border: 1px solid #114221;
  border-radius: 4px;
}

.ok.warn {
  background-color: #d3cc2a;
  color: #353150;

  border: 1px solid #39391c;
  border-radius: 4px;
}

.err {
  background-color: #cc0000;
  color: white;

  border: 1px solid #aa1010;
  border-radius: 4px;
}

